# pytodo-backend

./: .gitignore  Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 05b6db1ca1f3_initial_migration.py
src/: .null-ls_903214_main.py  main.py
src/common/: __init__.py  types.py
src/core/: __init__.py  auth.py  pydantic_todo.py  pydantic_user.py  user.py
src/data/: SAClasses.py  __init__.py  db.py  todo_methods.py  user_methods.py
src/routes/: __init__.py  responses.py  todo_bp.py  user_bp.py
tests/: db_test.py
